added scala to pom files

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -64,6 +64,8 @@
         <url>http://www.europeana.eu</url>
     </organization>
     <build>
+        <!--<sourceDirectory>src/main/scala</sourceDirectory>-->
+        <testSourceDirectory>src/test/scala</testSourceDirectory>
         <defaultGoal>package</defaultGoal>
         <finalName>${project.artifactId}</finalName>
         <extensions>
@@ -189,14 +191,14 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate</artifactId>
             <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>asm</groupId>-->
-                    <!--<artifactId>asm</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>asm</groupId>-->
-                    <!--<artifactId>asm-attrs</artifactId>-->
-                <!--</exclusion>-->
+            <!--<exclusion>-->
+            <!--<groupId>asm</groupId>-->
+            <!--<artifactId>asm</artifactId>-->
+            <!--</exclusion>-->
+            <!--<exclusion>-->
+            <!--<groupId>asm</groupId>-->
+            <!--<artifactId>asm-attrs</artifactId>-->
+            <!--</exclusion>-->
             <!--</exclusions>-->
         </dependency>
         <dependency>
@@ -275,11 +277,6 @@
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.osuosl.srw</groupId>-->
-        <!--<artifactId>srw_lucene</artifactId>-->
-        <!--&lt;!&ndash;suppress MavenModelInspection &ndash;&gt;-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-solrj</artifactId>
@@ -292,9 +289,20 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>asm</groupId>-->
-            <!--<artifactId>asm</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest</artifactId>
+            <!--<scope>test</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <!--<scope>test</scope>-->
+        </dependency>
     </dependencies>
 </project>
