--- a/portal-lite/pom.xml
+++ b/portal-lite/pom.xml
@@ -63,6 +63,8 @@
     <build>
         <defaultGoal>package</defaultGoal>
         <finalName>portal</finalName>
+        <!--<sourceDirectory>src/main/scala</sourceDirectory>-->
+        <testSourceDirectory>src/test/scala</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -128,6 +130,21 @@
         <dependency>
             <groupId>net.sourceforge.wurfl</groupId>
             <artifactId>wurfl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
