--- a/core/pom.xml
+++ b/core/pom.xml
@@ -292,7 +292,7 @@
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest</artifactId>
-            <!--<scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -302,7 +302,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <!--<scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
