--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,17 @@
             <name>EBR External Release Repository</name>
             <url>http://repository.springsource.com/maven/bundles/external</url>
         </repository>
+          <repository>
+            <id>scala-tools.releases</id>
+            <name>Scala-Tools Dependencies Repository for Releases</name>
+            <url>http://scala-tools.org/repo-releases</url>
+        </repository>
+        <repository>
+            <id>scala-tools.snapshots</id>
+            <name>Scala-Tools Dependencies Repository for Snapshots</name>
+            <url>http://scala-tools.org/repo-snapshots</url>
+            <snapshots/>
+        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -531,7 +542,7 @@
     </dependencyManagement>
     <properties>
         <europeana.definitions.version>1.00</europeana.definitions.version>
-        <europeana.core.version>1.19</europeana.core.version>
+        <europeana.core.version>1.20</europeana.core.version>
         <europeana.sip-creator.version>2.8</europeana.sip-creator.version>
         <europeana.portal.version>0.6</europeana.portal.version>
         <europeana.api.version>0.1</europeana.api.version>
