--- a/portal-full/src/main/webapp/WEB-INF/web.xml
+++ b/portal-full/src/main/webapp/WEB-INF/web.xml
@@ -105,15 +105,15 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/mc/css/*.css</url-pattern>
+        <url-pattern>/mc/css/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/mc/js/*.js</url-pattern>
+        <url-pattern>/mc/js/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/mc/img/*.jpg</url-pattern>
+        <url-pattern>/mc/img/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
