#1019, displaying mc static pages (js, css, jpg; no html yet)
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1456 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-full/src/main/webapp/WEB-INF/web.xml
+++ b/portal-full/src/main/webapp/WEB-INF/web.xml
@@ -105,15 +105,15 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/mc/css/*</url-pattern>
+        <url-pattern>/portal/mc/css/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/mc/js/*</url-pattern>
+        <url-pattern>/portal/mc/js/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/mc/img/*</url-pattern>
+        <url-pattern>/portal/mc/img/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
