--- a/core/src/test/resources/europeana-test.properties
+++ b/core/src/test/resources/europeana-test.properties
@@ -105,4 +105,4 @@ static.page.path = portal-full/src/test/staticpages/
 #
 # Where is the log4j.xml
 #
-log4j.xml=classpath:/log4j.xml
+log4j.xml=classpath:log4j.xml
