#1039 upgraded hibernate dependencies
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1606 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -189,17 +189,7 @@
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate</artifactId>
-            <!--<exclusions>-->
-            <!--<exclusion>-->
-            <!--<groupId>asm</groupId>-->
-            <!--<artifactId>asm</artifactId>-->
-            <!--</exclusion>-->
-            <!--<exclusion>-->
-            <!--<groupId>asm</groupId>-->
-            <!--<artifactId>asm-attrs</artifactId>-->
-            <!--</exclusion>-->
-            <!--</exclusions>-->
+            <artifactId>hibernate-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -208,6 +198,10 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
         </dependency>
         <dependency>
             <groupId>concurrent</groupId>
