--- a/pom.xml
+++ b/pom.xml
@@ -286,25 +286,26 @@
                 <artifactId>hsqldb</artifactId>
                 <version>1.8.0.10</version>
             </dependency>
+
             <dependency>
                 <groupId>org.hibernate</groupId>
-                <artifactId>hibernate</artifactId>
-                <version>${hibernate.version}</version>
+                <artifactId>hibernate-core</artifactId>
+                <version>3.3.2.GA</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
-                <version>${hibernate.entitymanager.version}</version>
+                <version>3.4.0.GA</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-annotations</artifactId>
-                <version>${hibernate.annotations.version}</version>
+                <version>3.4.0.GA</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>${hibernate.validator.version}</version>
+                <version>4.0.2.GA</version>
             </dependency>
 
             <!-- Spring -->
@@ -362,17 +363,17 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-web</artifactId>
-                <version>${spring.security.version}</version>
+                <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core</artifactId>
-                <version>${spring.security.version}</version>
+                <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-config</artifactId>
-                <version>${spring.security.version}</version>
+                <version>${spring.version}</version>
             </dependency>
 
             <!-- GWT -->
@@ -542,7 +543,7 @@
     </dependencyManagement>
     <properties>
         <europeana.definitions.version>1.00</europeana.definitions.version>
-        <europeana.core.version>1.25</europeana.core.version>
+        <europeana.core.version>1.26</europeana.core.version>
         <europeana.sip-creator.version>2.8</europeana.sip-creator.version>
         <europeana.portal.version>0.6.2</europeana.portal.version>
         <europeana.api.version>0.12</europeana.api.version>
@@ -551,12 +552,6 @@
         <jdkLevel>1.6</jdkLevel>
 
         <spring.version>3.0.2.RELEASE</spring.version>
-        <spring.security.version>3.0.2.RELEASE</spring.security.version>
-
-        <hibernate.version>3.2.7.ga</hibernate.version>
-        <hibernate.annotations.version>3.4.0.GA</hibernate.annotations.version>
-        <hibernate.entitymanager.version>3.3.2.GA</hibernate.entitymanager.version>
-        <hibernate.validator.version>4.0.2.GA</hibernate.validator.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
