#1056 removed security config from core appcontext now it's different for api and portals and contained in their resources as secure-application-context.xml in all three dispatcher-servlet.xml is now importing the secure-application-context.xml the RememberMeService we built to set the cookie path to / was breaking logout, so it was removed
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1608 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-full/src/main/webapp/WEB-INF/web.xml
+++ b/portal-full/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:application-context.xml</param-value>
+        <param-value>classpath:/secure-application-context.xml</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
