--- a/portal-full/src/main/webapp/WEB-INF/web.xml
+++ b/portal-full/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,10 @@
 
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>*.html</url-pattern>
     </filter-mapping>
     <filter-mapping>
