--- a/portal-lite/src/main/webapp/WEB-INF/web.xml
+++ b/portal-lite/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,10 @@
 
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>*.html</url-pattern>
     </filter-mapping>
     <filter-mapping>
