--- a/definitions/pom.xml
+++ b/definitions/pom.xml
@@ -26,15 +26,9 @@
     <artifactId>definitions</artifactId>
     <packaging>jar</packaging>
     <name>Europeana Definitions</name>
-    <version>${europeana.definitions.version}</version>
+    <version>1.01</version>
     <description>Definition classes for Europeana</description>
     <inceptionYear>2008</inceptionYear>
-
-    <parent>
-        <groupId>eu.europeana</groupId>
-        <artifactId>europeana</artifactId>
-        <version>1</version>
-    </parent>
 
     <developers>
         <developer>
@@ -56,6 +50,19 @@
         <name>Europeana Foundation</name>
         <url>http://www.europeana.eu</url>
     </organization>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
     </dependencies>
 </project>
