#1095 Layout good, first hacks at SipModel foundation for GUI.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1831 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -45,7 +45,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>eu.europeana.sip.gui.NormalizerPanel</mainClass>
+                            <mainClass>eu.europeana.sip.gui.SipCreatorGUI</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -72,11 +72,6 @@
             <artifactId>groovy-all</artifactId>
             <version>1.7.1</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>jsyntaxpane</groupId>-->
-            <!--<artifactId>jsyntaxpane</artifactId>-->
-            <!--<version>0.9.5-b29</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
