sipmanager updated apacheconf
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1845 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/utils/sipmanager-apache.conf
+++ b/tools/sip_manager/sip_manager/utils/sipmanager-apache.conf
@@ -30,7 +30,7 @@
     #
     # Full path to the wsgi script
     #
-    WSGIScriptAlias / /var/local/proj/multilingo/wsgi/django.wsgi
+    WSGIScriptAlias / /var/local/proj/sipmanager/wsgi/django.wsgi
     #
     # Grant access to the dir containing the wsgi script
     #
@@ -41,17 +41,17 @@
 
     #
     # You need to give a valid username who is to be the owner of the django process
-    # and give a fullpath to a home for the wsgi process (suggested the multilingo/apache location)
+    # and give a fullpath to a home for the wsgi process (suggested the sipmanager/apache location)
     #
-    WSGIDaemonProcess rhinecms user=jaclu home=/var/local/proj/multilingo/wsgi
+    WSGIDaemonProcess rhinecms user=jaclu home=/var/local/proj/sipmanager/wsgi
     WSGIProcessGroup rhinecms
 
     #
     # Locatio of apache logs
     #
-    ErrorLog /var/log/apache2/multilingo-error.log
+    ErrorLog /var/log/apache2/sipmanager-error.log
     LogLevel info
-    CustomLog /var/log/apache2/multilingo-access.log common
+    CustomLog /var/log/apache2/sipmanager-access.log common
 
 </Virtualhost>
 
