--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
             <name>EBR External Release Repository</name>
             <url>http://repository.springsource.com/maven/bundles/external</url>
         </repository>
-          <repository>
+        <repository>
             <id>scala-tools.releases</id>
             <name>Scala-Tools Dependencies Repository for Releases</name>
             <url>http://scala-tools.org/repo-releases</url>
@@ -159,6 +159,7 @@
         <module>dashboard</module>
         <module>sip-creator</module>
         <module>integration-tests</module>
+        <module>timeline</module>
     </modules>
     <organization>
         <name>Europeana Foundation</name>
@@ -538,7 +539,11 @@
                 <version>${scala.version}</version>
                 <scope>test</scope>
             </dependency>
-
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-all</artifactId>
+                <version>1.7.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <properties>
