--- a/core/pom.xml
+++ b/core/pom.xml
@@ -297,6 +297,11 @@
             <artifactId>solr-solrj</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
         </dependency>
