--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
                 </executions>
             </plugin>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>                                                                                
+                <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -519,6 +519,12 @@
                 <artifactId>solr-solrj</artifactId>
                 <version>1.4.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.solr</groupId>
+                <artifactId>solr-core</artifactId>
+                <version>1.4.0</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>org.scalatest</groupId>
