#1095 FileMenu improvements, for more general usefulness. starting sensible new version numbering sip-creator now only dependent on definitions, not core. jar vastly smaller. some things had to be (temporarily) copied to definitions: beans, interfaces, and enums.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@2028 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -86,8 +86,8 @@
     <dependencies>
         <dependency>
             <groupId>eu.europeana</groupId>
-            <artifactId>core</artifactId>
-            <version>${europeana.core.version}</version>
+            <artifactId>definitions</artifactId>
+            <version>${europeana.definitions.version}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
