#1095 Validation to be done on the basis of annotations rather than using Groovy code
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@2132 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>sip-creator</artifactId>
     <packaging>jar</packaging>
     <name>Normalizing XML to Europeana input format, validating, etc</name>
-    <version>${europeana.sip-creator.version}</version>
+    <version>0.7.7</version>
     <inceptionYear>2008</inceptionYear>
 
     <parent>
