--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>sip-creator</artifactId>
     <packaging>jar</packaging>
     <name>Normalizing XML to Europeana input format, validating, etc</name>
-    <version>0.8.0</version>
+    <version>0.8.1</version>
     <inceptionYear>2008</inceptionYear>
 
     <parent>
@@ -37,6 +37,37 @@
     <build>
         <defaultGoal>compile</defaultGoal>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo.webstart</groupId>
+                <artifactId>webstart-maven-plugin</artifactId>
+                <version>1.0-beta-1-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jnlp-inline</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <libPath/>
+                    <jnlp>
+                        <outputFile>sip-creator.jnlp</outputFile>
+                        <mainClass>eu.europeana.sip.gui.SipCreatorGUI</mainClass>
+                    </jnlp>
+                    <sign>
+                      <keystore>${basedir}/src/main/jnlp/snakeoil.keystore</keystore>
+                      <keypass>sip-creator</keypass>
+                      <storepass>sip-creator</storepass>
+                      <alias>sip-creator</alias>
+                      <verify>true</verify>
+                    </sign>
+                    <pack200>false</pack200>
+                    <gzip>false</gzip>
+                    <outputJarVersions>false</outputJarVersions>
+                    <verbose>false</verbose>
+                </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
@@ -72,24 +103,8 @@
             <artifactId>groovy-all</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.codehaus.woodstox</groupId>
             <artifactId>wstx-lgpl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.thoughtworks.xstream</groupId>
-            <artifactId>xstream</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.htmlparser</groupId>
-            <artifactId>htmlparser</artifactId>
         </dependency>
     </dependencies>
 </project>
