Updated poms and readme to reflect norvegiana project

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -65,7 +65,7 @@
     </organization>
     <build>
         <!--<sourceDirectory>src/main/scala</sourceDirectory>-->
-        <testSourceDirectory>src/test/scala</testSourceDirectory>
+        <!--<testSourceDirectory>src/test/scala</testSourceDirectory>-->
         <defaultGoal>package</defaultGoal>
         <finalName>${project.artifactId}</finalName>
         <extensions>
