--- a/pom.xml
+++ b/pom.xml
@@ -566,9 +566,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <gwtVersion>2.0.0</gwtVersion>
-        <scala.version>2.8.0.Beta1</scala.version>
-        <scalaTest.version>1.0.1-for-scala-2.8.0.Beta1-SNAPSHOT</scalaTest.version>
-        <!--<google.webtoolkit.home>${env.GWT_HOME}</google.webtoolkit.home>-->
+        <scala.version>2.8.0.RC3</scala.version>
+        <scalaTest.version>1.2-for-scala-2.8.0.RC3-SNAPSHOT</scalaTest.version>
 
     </properties>
 </project>
