#1210 CheckBoxes for constant fields where enums are present Fixed bug on mapping panel where source fields disappeared Clearing constant fields when no mapping present europeana:object no longer required, europeana:hasObject is required correction back to upper and lowercase for variable names
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@2324 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8
(cherry picked from commit 8c530cfec16b46503f93012c20b4c701876263b2)

Conflicts:

	pom.xml
	sip-creator/pom.xml
	sip-creator/src/main/java/eu/europeana/sip/gui/MappingPanel.java

--- a/pom.xml
+++ b/pom.xml
@@ -553,11 +553,11 @@
         </dependencies>
     </dependencyManagement>
     <properties>
-        <europeana.definitions.version>1.14</europeana.definitions.version>
-        <europeana.core.version>1.34</europeana.core.version>
-        <europeana.portal.version>0.6.7</europeana.portal.version>
-        <europeana.api.version>0.19</europeana.api.version>
-        <europeana.dashboard.version>0.3.5</europeana.dashboard.version>
+        <europeana.definitions.version>1.15</europeana.definitions.version>
+        <europeana.core.version>1.38</europeana.core.version>
+        <europeana.portal.version>0.7.RC1</europeana.portal.version>
+        <europeana.api.version>0.20</europeana.api.version>
+        <europeana.dashboard.version>0.3.6</europeana.dashboard.version>
 
         <jdkLevel>1.6</jdkLevel>
 
