--- a/meta-repo/pom.xml
+++ b/meta-repo/pom.xml
@@ -20,6 +20,13 @@
                 <role>consultant</role>
             </roles>
         </developer>
+        <developer>
+            <name>Sjoerd Siebinga</name>
+            <email>sjoerd.siebinga@gmail.com</email>
+            <roles>
+                <role>consultant</role>
+            </roles>
+        </developer>
     </developers>
     <organization>
         <name>Europeana Foundation</name>
@@ -55,6 +62,27 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
+                </configuration>
+            </plugin>
+             <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>**/*Spec.class</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
@@ -136,6 +164,21 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <scope>test</scope>
+        </dependency>
+
+         <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
         </dependency>
 
     </dependencies>
