--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -77,6 +77,12 @@
             <version>${europeana.definitions.version}</version>
         </dependency>
         <dependency>
+            <groupId>javax.jnlp</groupId>
+            <artifactId>jnlp-api</artifactId>
+            <version>1.5.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
         </dependency>
