--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -131,7 +131,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.5</version>
-<!--  
+<!--
 				<configuration>
 					<configLocation>whizbang/checkstyle.xml</configLocation>
 					<headerLocation>whizbang/LICENSE.txt</headerLocation>
@@ -170,6 +170,20 @@
 			<artifactId>hsqldb</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
