--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -91,6 +91,11 @@
             <artifactId>wstx-lgpl</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest</artifactId>
             <scope>test</scope>
