--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -91,9 +91,12 @@
             <artifactId>wstx-lgpl</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
