--- a/meta-repo/pom.xml
+++ b/meta-repo/pom.xml
@@ -46,8 +46,8 @@
         </pluginRepository>
     </pluginRepositories>
     <build>
-	    <sourceDirectory>src/main/scala</sourceDirectory>
-		<testSourceDirectory>src/test/scala</testSourceDirectory>
+        <sourceDirectory>src/main/scala</sourceDirectory>
+        <testSourceDirectory>src/test/scala</testSourceDirectory>
         <defaultGoal>package</defaultGoal>
         <finalName>${project.artifactId}</finalName>
         <plugins>
@@ -66,7 +66,7 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
-             <plugin>
+            <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
                 <executions>
@@ -96,6 +96,11 @@
         </repository>
     </repositories>
     <dependencies>
+        <dependency>
+            <groupId>eu.delving</groupId>
+            <artifactId>sip-core</artifactId>
+            <version>0.0.1</version>
+        </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
@@ -161,14 +166,7 @@
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
         </dependency>
-
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest</artifactId>
             <scope>test</scope>
