--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,7 @@
         <module>dashboard</module>
         <module>sip-creator</module>
         <module>integration-tests</module>
+        <module>sip-core</module>
         <module>meta-repo</module>
     </modules>
     <organization>
