HardCoded namespaces and now catching parsing errors of xml (problems with <br> and html entities within the xml fields)
added responseListSize to the meta-repo.properties

--- a/meta-repo/src/main/resources/meta-repo.properties
+++ b/meta-repo/src/main/resources/meta-repo.properties
@@ -4,3 +4,5 @@ earliestDateStamp = 1990-02-01T12:00:00Z
 
 repositoryIdentifier = bla.delving.eu
 sampleIdentifier = bla:123
+
+responseListSize = 100
