Periodically removing expired HarvestStep entries

--- a/meta-repo/pom.xml
+++ b/meta-repo/pom.xml
@@ -107,10 +107,14 @@
             <version>2.0</version>
         </dependency>
         <dependency>
-            <groupId>com.google.collections</groupId>
-            <artifactId>google-collections</artifactId>
-            <version>1.0</version>
+            <groupId>quartz</groupId>
+            <artifactId>quartz</artifactId>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.google.collections</groupId>-->
+            <!--<artifactId>google-collections</artifactId>-->
+            <!--<version>1.0</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
