--- a/pom.xml
+++ b/pom.xml
@@ -556,8 +556,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <gwtVersion>2.0.0</gwtVersion>
-        <scala.version>2.8.0.Beta1</scala.version>
-        <scalaTest.version>1.0.1-for-scala-2.8.0.Beta1-SNAPSHOT</scalaTest.version>
+        <scala.version>2.8.0</scala.version>
+        <scalaTest.version>1.2</scalaTest.version>
 
     </properties>
 </project>
