--- a/pom.xml
+++ b/pom.xml
@@ -567,8 +567,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <gwtVersion>2.0.0</gwtVersion>
-        <scala.version>2.8.0.RC3</scala.version>
-        <scalaTest.version>1.2-for-scala-2.8.0.RC3-SNAPSHOT</scalaTest.version>
+        <scala.version>2.8.0</scala.version>
+        <scalaTest.version>1.2</scalaTest.version>
 
     </properties>
 </project>
