--- a/meta-repo/pom.xml
+++ b/meta-repo/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>meta-repo</artifactId>
     <packaging>war</packaging>
     <name>Metadata Repository</name>
-    <version>0.1</version>
+    <version>${delving.metarepo.version}</version>
     <inceptionYear>2010</inceptionYear>
     <parent>
         <groupId>eu.europeana</groupId>
