--- a/loganalyser/pom.xml
+++ b/loganalyser/pom.xml
@@ -71,13 +71,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>eu.europeana</groupId>
-            <artifactId>definitions</artifactId>
-            <version>${europeana.definitions.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.woodstox</groupId>
-            <artifactId>wstx-lgpl</artifactId>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
